@@ -42,14 +42,16 @@ object Sensible {
         else Nil
       },
     javacOptions in (Compile, compile) ++= Seq(
-      "-source", "1.7", "-target", "1.7", "-Xlint:all", "-Werror",
+      "-Xlint:all", "-Werror",
       "-Xlint:-options", "-Xlint:-path", "-Xlint:-processing"
     ),
-    javacOptions in doc ++= Seq("-source", "1.7"),
 
-    javaOptions := Seq("-Xss2m", "-XX:MaxPermSize=256m", "-Xms384m", "-Xmx384m"),
-    javaOptions += "-Dfile.encoding=UTF8",
-    javaOptions ++= Seq("-XX:+UseConcMarkSweepGC", "-XX:+CMSIncrementalMode"),
+    javaOptions := Seq(
+      "-XX:MaxMetaspaceSize=256m",
+      "-Xss2m", "-Xms512m", "-Xmx512m",
+      "-Dfile.encoding=UTF8",
+      "-XX:+UseG1GC", "-XX:+UseStringDeduplication"
+    ),
     javaOptions in run ++= yourkitAgent, // interferes with sockets
 
     maxErrors := 1,
@@ -78,32 +80,27 @@ object Sensible {
     // one JVM per test suite
     fork := true,
     testForkedParallel := true,
-    testGrouping <<= (
-      definedTests,
-      baseDirectory,
-      javaOptions,
-      outputStrategy,
-      envVars,
-      javaHome,
-      connectInput
-    ).map { (tests, base, options, strategy, env, javaHomeDir, connectIn) =>
-        val opts = ForkOptions(
-          bootJars = Nil,
-          javaHome = javaHomeDir,
-          connectInput = connectIn,
-          outputStrategy = strategy,
-          runJVMOptions = options,
-          workingDirectory = Some(base),
-          envVars = env
-        )
-        tests.map { test =>
-          Tests.Group(test.name, Seq(test), Tests.SubProcess(opts))
-        }
-      },
+    testGrouping := {
+      val opts = ForkOptions(
+        bootJars = Nil,
+        javaHome = javaHome.value,
+        connectInput = connectInput.value,
+        outputStrategy = outputStrategy.value,
+        runJVMOptions = javaOptions.value,
+        workingDirectory = Some(baseDirectory.value),
+        envVars = envVars.value
+      )
+      definedTests.value.map { test =>
+        Tests.Group(test.name, Seq(test), Tests.SubProcess(opts))
+      }
+    },
 
-    javaOptions <++= (baseDirectory in ThisBuild, configuration, name).map { (base, config, n) =>
+    javaOptions ++= {
       if (sys.env.get("GC_LOGGING").isEmpty) Nil
       else {
+        val base = (baseDirectory in ThisBuild).value
+        val config = configuration.value
+        val n = name.value
         val count = forkCount.incrementAndGet() // subject to task evaluation
         val out = { base / s"gc-$config-$n.log" }.getCanonicalPath
         Seq(
@@ -122,7 +119,7 @@ object Sensible {
   )
 
   val scalaModulesVersion = "1.0.4"
-  val akkaVersion = "2.3.15"
+  val akkaVersion = "2.3.16"
   val scalatestVersion = "3.0.0"
   val logbackVersion = "1.7.21"
   val quasiquotesVersion = "2.0.1"
@@ -147,10 +144,11 @@ object Sensible {
   )
 
   def testLibs(config: String = "test") = Seq(
+    // janino 3.0.6 is not compatible and causes http://www.slf4j.org/codes.html#replay
     "org.codehaus.janino" % "janino" % "2.7.8" % config,
     "org.scalatest" %% "scalatest" % scalatestVersion % config,
-    "org.scalamock" %% "scalamock-scalatest-support" % "3.2.2" % config,
-    "org.scalacheck" %% "scalacheck" % "1.13.2" % config,
+    "org.scalamock" %% "scalamock-scalatest-support" % "3.3.0" % config,
+    "org.scalacheck" %% "scalacheck" % "1.13.4" % config,
     "com.typesafe.akka" %% "akka-testkit" % akkaVersion % config,
     "com.typesafe.akka" %% "akka-slf4j" % akkaVersion % config
   ) ++ logback.map(_ % config)
